WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184283
[iOS] WKWebView shouldn't know about WKPDFView
https://bugs.webkit.org/show_bug.cgi?id=184283
Summary
[iOS] WKWebView shouldn't know about WKPDFView
Andy Estes
Reported
2018-04-03 17:14:46 PDT
[iOS] WKWebView shouldn't know about WKPDFView
Attachments
Patch
(6.50 KB, patch)
2018-04-03 17:24 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(6.71 KB, patch)
2018-04-03 18:06 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-04-03 17:24:08 PDT
Created
attachment 337134
[details]
Patch
Andy Estes
Comment 2
2018-04-03 18:06:15 PDT
Created
attachment 337135
[details]
Patch
WebKit Commit Bot
Comment 3
2018-04-03 19:41:46 PDT
Comment on
attachment 337135
[details]
Patch Clearing flags on attachment: 337135 Committed
r230231
: <
https://trac.webkit.org/changeset/230231
>
WebKit Commit Bot
Comment 4
2018-04-03 19:41:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-04-03 19:42:19 PDT
<
rdar://problem/39163662
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug